--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ h1 {
     font-weight: normal;
     color: #E0FBFC;
     text-align: center;
-    padding: 80px 0;
+    padding: 70px 0;
 }
 
 span {
@@ -23,7 +23,8 @@ input {
     color: #E0FBFC;
     background: none;
     font-size: 56px;
-    width: 20%;
+    width: 30%;
+    border-radius: 2%;
     border: none;
     border-bottom: 1px solid #EE6C4D;
     transition: all ease-in-out 0.3s;
@@ -36,13 +37,14 @@ input[type="text"]:focus {
 }
 
 button {
+    border-radius: 2%;
     display: block;
     margin: 50px auto;
     font-size: 56px;
     border: 1px solid #EE6C4D;
     background-color: #293241;
     color: #E0FBFC;
-    width: 20%;
+    width: 30%;
     transition: all ease-in-out 0.3s;
 }
 
@@ -50,4 +52,14 @@ button:hover {
     background-color: #EE6C4D;
     color: #293241;
     cursor: pointer;
+}
+
+button:focus {
+    outline-width: 0;
+}
+
+p {
+    text-align: center;
+    font-size: 2rem;
+    color: #E0FBFC;
 }
